# minicc

./: .gitignore  README.md  mini-claude.bat  pyproject.toml
.github/workflows/: test.yml
src/: mini_claude.py
src/main/: _main_.py  agent.py  config_wizard.py  logger.py  session.py  subagent.py  ui.py
src/mcp_server/: mcp.py
src/memory/: frontmatter.py  memory.py
src/prompt/: prompt.py
src/prompt/skills/: skills.py
src/tools/: tools.py
tests/: conftest.py  test_agent.py  test_frontmatter.py  test_logger.py  test_mcp.py  test_memory.py  test_prompt.py  test_session.py  test_skills.py  test_tools.py
