[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "zahxi-minicc"
version = "0.1.3"
description = "Mini Claude Code - lightweight AI coding assistant CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "minicc contributors"},
]
keywords = ["cli", "ai", "coding-assistant", "openai", "anthropic", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.39",
    "openai>=1.0",
    "rich>=13.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/xvdfhdh/minicc"
Repository = "https://github.com/xvdfhdh/minicc"

[project.scripts]
mini-claude = "src.mini_claude:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
